syntax = "proto3";

package Login;

option go_package = ".;Login";

service Login {
    rpc sendEmail(email) returns (jwt);
    rpc acceptEmail(code) returns (tmpReturn);
}

message email {
    string email = 1;
}

message jwt {
    string jwt = 1;
}

message code {
    string code = 1;
}

message tmpReturn {
    string str = 1;
}